invert sidebar + content area and punch up colors

--- a/frontend/src/metabase/ui/components/data-display/Card/Card.module.css
+++ b/frontend/src/metabase/ui/components/data-display/Card/Card.module.css
@@ -6,3 +6,10 @@
     border-bottom-color: var(--mb-color-border);
   }
 }
+
+.Card {
+  &[data-variant="admin"] {
+    box-shadow: none;
+    border: 1px solid var(--mb-color-border);
+  }
+}
